fix window content overflow

--- a/win98/windows.css
+++ b/win98/windows.css
@@ -87,6 +87,19 @@ body, html {
     box-sizing: border-box;
 }
 
+.window {
+    min-width: 400px;
+    max-width: 100vw;
+    max-height: 100%;
+    position: absolute;
+    overflow: hidden;
+    z-index: 1000;
+    top: 90px;
+    left: 150px;
+    /* Ensure borders are included in the element's total width/height */
+    box-sizing: border-box;
+}
+
 .desktop {
     height: 100%;
     width: 100%;
@@ -99,25 +112,14 @@ body, html {
     gap: 5px;
 }
 
-.window {
-    width: 80vw; /* 80% of the viewport width */
-    max-width: 100vw;
-    max-height: 100%;
-    position: absolute;
-    overflow: hidden;
-    z-index: 1000;
-    top: 50%;
-    left: 50%;
-    box-sizing: border-box;
-}
-
 .window-content {
     font-family: 'Tex Gyre Heros', Helvetica, Arial, sans-serif;
     padding: 10px;
-    overflow-y: auto; /* Enable vertical scrolling */
-    overflow-x: auto; /* Enable horizontal scrolling */
-    max-height: calc(100vh - 48px); /* Adjust for padding and ensure content fits within the window minus the taskbar height */
-    max-width: calc(100vw - 20px); /* Adjust for padding and ensure content fits within the window */
+    overflow: auto; 
+    height: calc(100% - 30px); 
+    max-height: none; 
+    width: 100%; s
+    box-sizing: border-box;
 }
 
 .window-content ul {
